# Gridlock

./: .gitignore  GDD.md  RAILWAY.md  README.md  icons_preview.html  index.html  package-lock.json  package.json  tailwind.config.js  unit_image_prompts.md  units.md  vite.config.ts  walkthrough.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: progression.py  ws.py
backend/app/core/: config.py
backend/app/db/: mongo.py
backend/app/models/: base.py  user.py
backend/app/services/: progression.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_SETUP.md  SKILL_CREATION_GUIDE.md  STATUS_EFFECTS_GUIDE.md
server/: package-lock.json  package.json
server/src/: backendSocket.ts  gameRooms.ts  index.ts  types.ts
src/: App.tsx  index.css
src/ai/: opponentAI.ts
src/api/: client.ts
src/combat/: types.ts
src/combat/adapter/: CombatStateAdapter.ts
src/combat/effects/: StatusRegistry.ts  StatusResolver.ts  TurnEffects.ts
src/combat/engine/: ActionContext.ts  (+4 more)
src/components/: Board.tsx  Cell.tsx  DisconnectModal.tsx  EnhancedSkillTree.tsx  GameOverModal.tsx  HowToPlay.tsx  Hub.tsx  InitiativeTrack.tsx  Lobby.tsx  MainMenu.tsx  MoveHistory.tsx  PlayerPanel.tsx  SkillBar.tsx  SkillNode.tsx  SkillTree.tsx  TopBar.tsx  TurnTimer.tsx  Unit.tsx  UnitInfoPanel.tsx  UnitRoster.tsx
src/data/: skills.ts  unitData.ts
src/services/: socket.ts
src/store/: gameStore.ts  progressionStore.ts  skillStore.ts
src/types/: index.ts  primitives.ts
src/utils/: SoundManager.ts  movement.ts  unitUtils.tsx
(+17 files in other folders)
